fix: icons delay causing wrong tab indicator alignement

--- a/src/client/assets/javascripts/features/sidebar/components/SidebarApp.scss
+++ b/src/client/assets/javascripts/features/sidebar/components/SidebarApp.scss
@@ -9,7 +9,7 @@
   //   rgb(45, 45, 46) 0%,
   //   rgb(45, 45, 46) 80%,
   //   rgb(32, 31, 31) 100%);
-
+  width: 54.38px;
   div {
     padding: 0.6em 1.2em;
     display: block !important;
