--- a/src/client/assets/javascripts/features/store/components/catalogue/CatalogueView/CatalogueView.scss
+++ b/src/client/assets/javascripts/features/store/components/catalogue/CatalogueView/CatalogueView.scss
@@ -1,8 +1,5 @@
 
 .storeContainer {
-  .storeNav {
-  }
-
   .results {
     margin: 1.4em 2.4em 0 2.4em;
     .resultsTitle {
